toms-electric/src/App.css
/* Site Wide */

@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');

h1 {
    font-family: 'Bebas Neue', sans-serif;
    font-size: x-large; 
}

.background-color {
    background-color: #1e2022; 
}

.alt-background {
    background-color: #e6e6e6;
}

.relative {
    position: relative; 
}

.block {
    display: block; 
}

body {
    background-color: #e6e6e6;
}

/* NavBar */

.nav-bar {
    position: sticky; 
    background-color: #1e2022; 
    top: 0; 
    z-index: 1000;
}

.nav-btns {
    background-color: #1e2022; 
    border-color: #1e2022;
    font-family: 'Bebas Neue', sans-serif; 
    font-size: x-large;
}

.nav-btns:hover {
    background-color: #43474d  ;
    border-color: #282c31;
}

.logo-size {
    width: 100px; 
    height: 100px; 
}

/* Slides */

.background-image {
    width: 100%; 
    height: 80vh;
    object-fit: cover;
    object-position: center;
}

/* Mobile View (Image) */
@media (max-width: 464px) {
    .background-image {
        height: 30vh; 
        object-position: center; 
    }
}

.background-darkener {
    position: absolute; 
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5); 
    z-index: 0; 
}

/* Carousel */

.carousel-content {
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center; 
    color: white;
    z-index: 1;
}

.carousel-title {
    color: white; 
    font-size: 3.85rem; 
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); 
    text-align: center;
}

.carousel-line {
    width: 100%; 
    height: 2px; 
    background-color: white; 
    margin: 10px auto; 
    border: none; 
}

.carousel-text {
    color: white; 
    font-size: 1.5rem; 
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); 
    text-align: center;
}

.carousel-btn {
    margin-top: 20px;
}

/* Mobile View (Text) */
@media (max-width: 464px) {
    .carousel-title {
        font-size: 1.6rem; 
        padding-top: 15px; 
    }

    .carousel-text {
        display: none; 
    }

    .carousel-line {
        display: none; 
    }

    .carousel-btn {
        margin-top: 15px; 
    }
}

/* Contact Info */

.contact-name {
    color: white; 
}

.contact-info {
    color: white; 
}

.cell-one {
    border-right: 3px solid #f9c307; 
    border-left: 4px solid #f9c307; 
}

.cell-two {
    border-left: 2px solid #f9c307; 
    border-right: 4px solid #f9c307; 
}

@Media (max-width: 769px) {
    .cell-one {
        border-bottom: 4px solid #f9c307; 
        border-right: 2px solid #1e2022;  
        border-left: 2px solid #1e2022; 
        width: 85%; 
        margin-bottom: 10px; 
        padding-bottom: 10px; 
    }
    
    .cell-two {
        margin-top: 10px;
        border-left: 2px solid #1e2022; 
        border-right: 2px solid #1e2022;  
        width: 85%; 
    }
}

/* HomeAbout */

.yellow-background {
    background-color: #f9c307;
}

.about-title {
    position: relative; 
    font-family: 'Bebas Neue', sans-serif;
    font-size: xx-large; 
    color: white; 
}

.about-body {
    position: relative; 
    font-size: large; 
    color: white; 
}

.about-background {
    position: relative; 
    background-image: url('/public/works/kitchen_lights.webp');
    background-size: cover;
    background-position: center;
    height: 100%; 
    width: 100%;
}

/* About */ 

.headshot {
    width: 90%; 
    height: 100%;
    padding-top: 2rem; 
    padding-bottom: 2rem;
}

@media (min-width: 991px) {
    .headshot {
        width: 100%; 
        height: 100%;
        padding-top: 2rem; 
        padding-bottom: 2rem;
    }

    .full-view {
        height: 100vh; 
        align-items: start; 
    }

    .about-text {
        padding-top: 5rem;
    }
}

@media (min-width: 1159) {
    .margin {
        margin-top: 0rem;
    }
}
.margin {
    margin-top: 2rem; 
}

.full-view {
    overflow-x: hidden;
    min-height: 100vh; 
}

.title {
    font-size: xxx-large; 
    text-decoration: underline; 
}

.clickable {
    cursor: pointer;
}

.about-text {
    font-size: large; 
    color: black; 
}

/* Contact */

.contact-background {
    background-color: #e6e6e6; 
    height: 100vh; 
    display: flex;
}

.underline {
    text-decoration: underline;
}

/* FooterNotes */

.footer-font {
    position: relative; 
    font-size: large; 
    color: #bfbfbf; 
    overflow-x: hidden;
}

.links {
    text-decoration: underline; 
    color: inherit; 
}


/* Gallery */

/* Gallery container */
.photos-container {
    max-width: 100%; 
    margin: 20px;
    overflow: hidden; 
    height: fit-content; 
}
  
.masonry-grid {
    display: flex;
    margin-left: -16px; 
    width: auto;
}

.masonry-grid_column {
    padding-left: 16px; 
    background-clip: padding-box;
}

.gallery-image {
    width: 100%;
    height: auto;
    margin-bottom: 16px;
    border-radius: 8px; 
    object-fit: cover; 
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
    transition: transform 0.3s ease; 
}

.gallery-image:hover {
    transform: scale(1.05);
}

